# src/main/resources/swagger/openapi.yaml
@@ -36,13 +36,42 @@ paths:
       summary: get all user
       description: Returns all user from the system that the user has access to
       operationId: getAllUser
+      parameters:
+        - name: page
+          in: query
+          description: Current page
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 0
+        - name: pageSize
+          in: query
+          description: Current page
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 10
+        - name: filter
+          in: query
+          description: filter
+          schema:
+            type: string
+            default: null
+        - name: sort
+          in: query
+          description: sort
+          schema:
+            type: string
+            default: null
       responses:
         '200':
           description: A list of user
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserArray'
+                $ref: '#/components/schemas/UserPage'
     post:
       tags:
         - user
@@ -114,6 +143,12 @@ paths:
             schema:
               $ref: '#/components/schemas/User'
       responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
         '400':
           description: Invalid user supplied
         '404':
@@ -602,8 +637,19 @@ components:
         status:
           type: integer
           description: User Status
-          format: int32
-          example: 1
+          enum:
+            - 0
+            - 1
+            - 2
+          default: 1
+        role:
+          type: string
+          description: User Role
+          enum:
+            - USER
+            - MANAGER
+            - ADMIN
+          default: USER
       xml:
         name: user
 
@@ -611,6 +657,26 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/User'
+
+    UserPage:
+      type: object
+      properties:
+        page:
+          type: integer
+          format: int32
+        pageSize:
+          type: integer
+          format: int32
+        total:
+          type: integer
+          format: int32
+        totalPages:
+          type: integer
+          format: int32
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/User'
 
     Profile:
       type: object
@@ -620,8 +686,9 @@ components:
           format: int64
           example: 1001
         userId:
-          type: string
-          example: 1001
+          type: integer
+          format: int64
+          example: 1
         name:
           type: string
           example: 'Profile 1'
@@ -630,6 +697,11 @@ components:
           example: 'image.png'
         status:
           type: string
+          enum:
+            - ACTIVE
+            - INACTIVE
+            - LOCKED
+          default: ACTIVE
         type:
           type: string
         password:
